2002-05-07  Larry Jones  <lawrence.jones@eds.com>

	* commit.c (commit): Always send -m to the server, even if there's
	no message.

	* create_adm.c (Create_Admin): Add dotemplate parameter to trace.
	Remove unreachable code.

2002-05-03  Larry Jones  <lawrence.jones@eds.com>

	* server.c (serve_watch_on, serve_watch_off, serve_watch_add,
	 serve_watch_remove): Just pass "watch" as the command name
	 to do_cvs_command to avoid unknown command errors.
	 (Reported by Gary Hennigan <gary@ieee.org>.)

	* rcs.c (RCS_checkin): Fix bad call to error () in buggy
	PRESERVE_PERMISSIONS code.
	(rcs_internal_unlockfile): Include current value of errno in error
	message even though it may well be irrelevant (it's still better
	than nothing).

2002-05-02  Derek Price  <oberon@umich.edu>

	* .cvsignore: Remove lines for files obsoleted by new autotools.

2002-05-02  Derek Price  <oberon@umich.edu>

	* stamp-h2.in: Remove this uneeded file.

2002-05-01  Derek Price  <oberon@umich.edu>

	* options.h.in: Move to...
	* options.h: here.

2002-04-30  Derek Price  <oberon@umich.edu>

	* version.h.in: Remove this file.
	* version.h: Ditto.

	* Makefile.am: Remove references to version.h.
	* cvs.h: Use <> rather than "" around the config.h #include.  I didn't
	quite bother to understand why, but autoconf recommends it.
	* cvsbug.in: Use PACKAGE_BUGREPORT defined by configure for the bug
	report email address.
	* version.c (version): Use PACKAGE_STRING defined in config.h instead
	of the version_string that used to be defined in version.h.

	* Makefile.in: Regenerated with automake 1.6.

2002-04-28  Derek Price  <oberon@umich.edu>

	* cvs.h: Use `"'s around includes when we mean a local file.

2002-04-28  Derek Price  <oberon@umich.edu>

	* cvs.h: #define new names for functions and variables when they
	might conflict with system definitions (namely on Mac OS X 10.1 with
	the most recent dev packages - This should be removable after the Mac
	dev packages are fixed.).
